# Lab_ml3

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
src/: download.py  ingestion.py  loader.py  metrics.py  model.py  test_model.py  train_model.py
